[package]
name = "unzip-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
com = { git = "https://github.com/microsoft/com-rs", features = ["production"]}
libc = "0.2.147"

[lib]
crate-type = ["rlib", "cdylib"]
